2007-06-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs,
	  MonoDevelop.Core.Gui.Dialogs/IDialogPanel.cs: Tree View Options now
	  works on the IDialogPanel interface instead of the abstract class
	  AbstractOptionPanel.

2007-06-20  Mike Krüger <mkrueger@novell.com> 

	Fixed a bug (treeviewoptions asserted that all option dialog widgets are frames).

2007-06-19  Mike Krüger <mkrueger@novell.com> 

	* icons/Icons.16x16.ClosedFolderBitmap: overworked some of the windows
	  icons.

2007-06-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui/DispatchService.cs: Fix some warnings.

2007-06-19  Mike Krüger <mkrueger@novell.com> 

	removed standalone tag from .recently-used.

2007-06-19  Mike Krüger <mkrueger@novell.com> 

	removed the BOM in .recently-used file.

2007-06-19  Mike Krüger <mkrueger@novell.com> 

	RecentItems now use the .NET classes for Uri and DateTime and hides some details of the freedesktop recent file management.

2007-06-19  Mike Krüger <mkrueger@novell.com> 

	Added file system watcher and file locking to recent file handling.

2007-06-18  Mike Krüger <mkrueger@novell.com> 

	Improved recent file management. The files are now stored only on disc. Still TODO: File System Locks (how to use the posix log from .NET) and file system watcher.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs: Expand root nodes by
	  default.

2007-05-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui/CommandService.cs: Unregister commands from
	  unloaded add-ins. Don't reuse extension objects when creating a
	  menu, since they may have changed.

2007-05-21  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Core.Gui/MessageService.cs: Ensure Dialogs are Destroy()'ed.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp: Reference copy fix.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 
