@@ -1,3 +1,9 @@
+2007-07-17  Jeffrey Stedfast  <fejj@novell.com>
+
+	* MonoDevelop.Core.Gui.Codons/CommandCodon.cs: Use the new
+	KeyBindingManager to canonicalize the shortcut string into the new
+	format (in case it was in the old format).
+
 2007-06-22  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs,
@@ -7,7 +13,8 @@
 
 2007-06-20  Mike Krüger <mkrueger@novell.com> 
 
-	Fixed a bug (treeviewoptions asserted that all option dialog widgets are frames).
+	Fixed a bug (treeviewoptions asserted that all option dialog
+	widgets are frames).
 
 2007-06-19  Mike Krüger <mkrueger@novell.com> 
 
